--- a/Dados_Telecom_Analise_Limpeza.ipynb
+++ b/Dados_Telecom_Analise_Limpeza.ipynb
@@ -8177,7 +8177,7 @@
         "\n",
         "Desenvolvido por Raul Rosa.\n",
         "\n",
-        "rr0608@outlook.com\n",
+        "raulrosa.dev@gmail.com\n",
         "\n",
         "<a href=\"https://www.linkedin.com/in/raul-rosa/\">LinkedIn</a>\n",
         "\n",
